fixed layout issues for first page

--- a/style/customstyle.css
+++ b/style/customstyle.css
@@ -30,7 +30,6 @@
 
 .syllabus-icon {
   width: 75px;
-  padding-right: 1rem;
 }
 
 .entrance {
@@ -39,14 +38,28 @@
   top: 0;
 }
 
-.w-30 {
-  width: 25%;
-  flex-basis: 25%;
+.w-20 {
+  width: 20%;
+  flex-basis: 20%;
+}
+
+.w-50 {
+  width: 50%;
+  flex-basis: 50%;
 }
 
 .w-81 {
   width: 81%;
   flex-basis: 81%;
+}
+
+.syllabus h3 {
+  flex: 1 1 15%;
+  padding: 0.5rem;
+}
+
+.syllabus p {
+  flex: 1 1 35%;
 }
 
 .tiny-border {
@@ -66,8 +79,12 @@
 }
 
 .syllabus {
-  margin-top: 470px;  
+  margin-top: 470px;
+}
 
+.syllabus h3,
+.syllabus p {
+  width: 100%;
 }
 
 .lecturer {
@@ -118,27 +135,29 @@
 .position-relative {
   position: relative;
 }
-/* syllabus icon padding should be deleted */
+
 .date {
   font-size: 1rem;
   font-weight: 700;
 }
 
 .copyright-logo {
-  width: 90px;
+  width: 40px;
+  margin-right: 10px;
 }
 
+.text-center {
+  text-align: center;
+}
+
+
 @media screen and (min-width:768px) {
-  header > * {
-    padding: 0 80px;
+  .side-padding {
+    padding: 0 100px;
   }
 
   .date {
     font-size: 2rem;
-  }
-
-  .syllabus-icon {
-    padding: 0;
   }
 
   .syllabus-icon[src*="Rails"] {
@@ -184,8 +203,17 @@
     width: 50%;
     flex-basis: 50%;
   }
+
   .lecturer {
     margin: 0;
   }
-}
 
+  .w-25-lg {
+    width: 25%;
+    flex-basis: 25%;
+  }
+
+  .copyright-logo {
+    width: 90px;
+  }
+}
